--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <div class="span9 content">
         <ul class="unstyled" id="plugin-version-runstop">
         		<img src="/assets/runstop/img/Restart.png" >﻿</br></br>
+            <li><i class="icon-play-circle"></i> Version 1.1:</br>
+			[X] SCRIPTS : Modification du fichier INI pour proposer les valeurs possibles selon les versions de SARAH.</br>
+			[X] AUTOIT : Légère modification du script (petit délair de 100 ms pour laisser l'apparition du menu).</br>
+			[X] DOCUMENTATION : Prise en compte des modifications.</br></br>
             <li><i class="icon-play-circle"></i> Version 1.0:</br>
 			[X] STOP SARAH : Arrêt de SARAH par commande vocale.</br>
 			[X] RESTART SARAH : Redémarrage de SARAH par commande vocale.</br>
@@ -79,7 +83,7 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code>Micro=WSRMicro.cmd</code></br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code>Kinect=WSRKinect.cmd</code></br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code>Log2Console=Log2Console.exe</code></br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Ces valeurs ne devraient jamais être changgées.<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- ATTENTION ! Ces valeurs sont différentes selon la version de SARAH ! (Cf. fichier INI pour le détail).<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Elles correspondent au nom des fichiers de lancement des différents modues de SARAH.<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code>UseKinect=true</code></br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Mettez à "true" si vous utilisez une Kinect et lancez habituellement "WSRMicro_Kinect.cmd".<br>
@@ -108,7 +112,7 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code>CmdLineKinect=WSRMacro_Kinect.exe</code></br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code>CmdLineConhost=conhost.exe</code></br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code>CmdLineLog2Console=Log2Console.exe</code></br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Ces valeurs ne devraient jamais être changgées.</br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- ATTENTION ! Ces valeurs sont différentes selon la version de SARAH ! (Cf. fichier INI pour le détail).<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Elles correspondent à la chaïne de caractères située dans la ligne de commande de chacun des process.</br></br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code>AutoIExect=Exit_TrayIcon.exe</code></br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Cette valeur ne devrait pas être changée.</br>
