--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <span class="lead">Permet également l'exécution d'actions au démarrage, et l'affichage d'information sur le portlet.</span><br/>
 </p>
 
-<div id="plugin-menu" class="row-fluid">
+<div id="plugin-menu" class="row">
 	
     <!--Navigation-->
-    <div class="span3 well plugin-nav">
+    <div class="stretch col-md-3 well plugin-nav">
         <ul class="nav nav-list">
             <li class="nav-header">Configuration</li>
             <li class="#"><a href="" data-toggle="plugin-config-trayicon">Icônes de la zone de notifications</a></li>
@@ -36,7 +36,7 @@
     </div>
     
 <!--Version-->
-    <div class="span9 content">
+	<div class="col-md-9 content">
         <ul class="unstyled" id="plugin-version-runstop">
         		<img src="/assets/runstop/img/RunStop_Portlet.png" >﻿</br></br>
             <li><i class="icon-play-circle"></i><strong> Version 2.0:</strong></br>
@@ -112,7 +112,6 @@
 		</ul>
 		
  <!--Content-->
-    <div class="span9 content">
         <!--Config TRAYICON-->
         <ul class="unstyled" id="plugin-config-trayicon" style="display: none;">
           <li><i class="icon-play-circle"></i><strong>&nbsp;Afficher constamment les icônes de la "petite maison" et de Log2Console.</strong></br></br>
