--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
         
         <!--Config FILE-->
         <ul class="unstyled" id="plugin-config-inifile" style="display: none;">
+		 <li><i class="icon-play-circle"></i> <strong>&nbsp;ATTENTION</strong></br></br>
+				&nbsp;&nbsp;&nbsp;Si l'affichage du portlet vous parait bizarre (chevauchements d'icônes), augmentez manuellement la largeur du portlet à "2" :</br>
+				&nbsp;&nbsp;&nbsp;- Allez au dos du portlet.</br>
+				&nbsp;&nbsp;&nbsp;- Cliquer sur "Config".</br>
+				&nbsp;&nbsp;&nbsp;- Tout en bas, mettre la valeur "2" dans le champ "w".</br></br>
          <li><i class="icon-play-circle"></i> <strong>&nbsp;Paramétrer le CRON.</strong></br></br>
 				&nbsp;&nbsp;Le paramétrage du CRON est accessible à partir du porlet visible dans la rubrique "C.R.O.N." de la page d'accueil.</br></br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code>time=* * * * *</code></br>
