--- a/portlet.html
+++ b/portlet.html
@@ -46,8 +46,9 @@ SI VOUS NE VOULEZ PLUS UTILISER CETTE FONCTIONNALITE :
 <div class="logo_sarah">
   <a href="sarah/runstop?need=s_wakeup" class="ajax"><span class="s_play"><img src="/assets/runstop/img/portlet/s_Play.png" title="Reviens maintenant"></span></a>
   <a href="sarah/runstop?need=s_standby" class="ajax"><span class="s_standby"><img src="/assets/runstop/img/portlet/s_Standby.png" title="Mets-toi en veille"></span></a>
-  <a href="sarah/runstop?need=s_restart" class="ajax"><span class="s_restart"><img src="/assets/runstop/img/portlet/s_Restart.png" title="Redemarre s'il te plait"></span></a>
-  <a href="sarah/runstop?need=s_stop" class="ajax"><span class="s_stop"><img src="/assets/runstop/img/portlet/s_Stop.png" title="Arrete-toi definitivement"></span></a>
+  <a href="sarah/runstop?need=s_restart" class="ajax"><span class="s_restart"><img src="/assets/runstop/img/portlet/s_Restart.png" title="Redémarre s'il te plait"></span></a>
+  <a href="sarah/runstop?need=s_stop" class="ajax"><span class="s_stop"><img src="/assets/runstop/img/portlet/s_Stop.png" title="Arrête-toi definitivement"></span></a>
+  </br>
 </div>
 
 <div>	
@@ -66,8 +67,9 @@ SI VOUS NE VOULEZ PLUS UTILISER CETTE FONCTIONNALITE :
   <a href="sarah/runstop?need=PC_LogOff" class="ajax"><span class="PC_LogOff"><img src="/assets/runstop/img/portlet/PC_LogOff.png" title="Ferme la session"></span></a>
   <a href="sarah/runstop?need=PC_Sleep" class="ajax"><span class="PC_Sleep"><img src="/assets/runstop/img/portlet/PC_Sleep.png" title="Mets l'ordinateur en veille"></span></a>
   <a href="sarah/runstop?need=PC_Hibernate" class="ajax"><span class="PC_Hibernate"><img src="/assets/runstop/img/portlet/PC_Hibernate.png" title="Mets l'ordinateur en hibernation"></span></a>
-  <a href="sarah/runstop?need=PC_Restart" class="ajax"><span class="PC_Restart"><img src="/assets/runstop/img/portlet/PC_Restart.png" title="Redemarre l'ordinateur"></span></a>
-  <a href="sarah/runstop?need=PC_Restart_Force" class="ajax"><span class="PC_Restart_Force"><img src="/assets/runstop/img/portlet/PC_Restart_Force.png" title="Redemarre de force l'ordinateur"></span></a>
-  <a href="sarah/runstop?need=PC_Stop" class="ajax"><span class="PC_Stop"><img src="/assets/runstop/img/portlet/PC_Stop.png" title="Arrete l'ordinateur"></span></a>
+  <a href="sarah/runstop?need=PC_Restart" class="ajax"><span class="PC_Restart"><img src="/assets/runstop/img/portlet/PC_Restart.png" title="Redémarre l'ordinateur"></span></a>
+  <a href="sarah/runstop?need=PC_Restart_Force" class="ajax"><span class="PC_Restart_Force"><img src="/assets/runstop/img/portlet/PC_Restart_Force.png" title="Redémarre de force l'ordinateur"></span></a>
+  <a href="sarah/runstop?need=PC_Stop" class="ajax"><span class="PC_Stop"><img src="/assets/runstop/img/portlet/PC_Stop.png" title="Arrête l'ordinateur"></span></a>
+  </br>
 </div>
 
